--- a/about_mobile.html
+++ b/about_mobile.html
@@ -18,7 +18,7 @@
 
 		<!-- webpage header -->
 		<div id="header">
-			<img id="logo" src="img\logo_mobile.png" alt="Website Logo" draggable="false">
+			<img id="logo" src="img\logo.png" alt="Website Logo" draggable="false">
 		</div>
 
 		<!-- webpage main body -->
