--- a/projects.html
+++ b/projects.html
@@ -31,10 +31,9 @@
 
 			<!-- logos -->
 			<img id="logo" src="img\logo.png" alt="Website Logo" draggable="false">
-			<img id="psu_logo" src="img\psu_eng.png" alt="PSU Logo" draggable="false">
 
 			<!-- links to other pages -->
-			<div id="link_oval">
+			<div id="link_container">
 				<a href="index.html"> Resume </a>
 				<a href="projects.html"> Projects </a>
 				<a href="about.html"> About Me </a>
