--- a/projects_mobile.html
+++ b/projects_mobile.html
@@ -20,7 +20,7 @@
 		<div id="header">
 
 			<!-- logo -->
-			<img id="logo" src="img\logo_mobile.png" alt="Website Logo" draggable="false">
+			<img id="logo" src="img\logo.png" alt="Website Logo" draggable="false">
 		</div>
 		
 		<!-- webpage main body -->
