--- a/about_mobile.html
+++ b/about_mobile.html
@@ -6,7 +6,7 @@
 
 	<!-- webpage head -->
 	<head>
-		<title>Virtual Resume</title>
+		<title>Paul J Scott</title>
 		<link rel="stylesheet" href="styles_mobile.css">
 
 		<!-- google font link -->
