--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 	
 	<!-- webpage head -->
 	<head>
-		<title>Virtual Resume</title>
+		<title>Paul J Scott</title>
 		<link rel="stylesheet" href="styles.css">
 		<link rel="icon" href="img\favicon.png">
 
@@ -29,8 +29,10 @@
 		<!-- webpage header -->
 		<div id="header">
 
-			<!-- logos -->
-			<img id="logo" src="img\logo.png" alt="Website Logo" draggable="false">
+			<!-- logo -->
+			<a href="index.html">
+				<img id="logo" src="img\logo.png" alt="Website Logo">
+			</a>
 
 			<!-- links to other pages -->
 			<div id="link_container">
