--- a/projects_mobile.html
+++ b/projects_mobile.html
@@ -6,7 +6,7 @@
 
 	<!-- webpage head -->
 	<head>
-		<title>Virtual Resume</title>
+		<title>Paul J Scott</title>
 		<link rel="stylesheet" href="styles_mobile.css">
 
 		<!-- google font link -->
@@ -25,9 +25,29 @@
 		
 		<!-- webpage main body -->
 		<div id="middle">
+
+			<!-- apogee artist -->
+			<div id="info_block" style="padding-top: 6em">
+				<p id="info_title"> Apogee Artist <br><br></p>
+
+				<!-- project image -->
+				<img style="width: 100%;" src="img\apogee.png" draggable="false" alt="Bitwise Game Maker">
+
+				<!-- project description-->
+				<p><br> 
+					The spiritual successor to my previous program, Java Paint. I decided to take my ideas from Java Paint and make a new and heavily improved program. The program is entirely rewritten and now uses Kotlin. Also, the user interface is now completely resizable unlike in Java Paint. With a wide variety of advanced tools and features, I feel that this is the closest I have come to making a passable piece of illustration software. I'm not saying that this program is going to compete with Adobe or anything, but at least the program is exciting to use!<br><br>
+
+					[Programmed in Koltin]<br><br><br>
+				</p>
+
+				<!-- github link -->
+				<div style="text-align: center;">
+					<input type="button" value="View On Github" onCLick="window.open('https://github.com/PScottZero/Apogee-Artist')"/>
+				</div>
+			</div>
 			
 			<!-- bitwise game maker -->
-			<div id="info_block" style="padding-top: 6em">
+			<div id="info_block">
 				<p id="info_title"> Bitwise Game Maker <br><br></p>
 
 				<!-- project image -->
@@ -43,46 +63,6 @@
 				<!-- github link -->
 				<div style="text-align: center;">
 					<input type="button" value="View On Github" onCLick="window.open('https://github.com/PScottZero/Bitwise-Game-Maker')"/>
-				</div>
-			</div>
-			
-			<!-- java paint -->
-			<div id="info_block">
-				<p id="info_title"> Java Paint <br><br></p>
-
-				<!-- project image -->
-				<img style="width: 100%;" src="img\javapaint.png" draggable="false">
-
-				<!-- project description -->
-				<p><br> 
-					Java Paint is designed to be a simple to use painting program. It has a few simple tools that allow for users to draw shapes like rectangles, ovals, and triangles. It also features the ability to open and save images.<br><br>
-
-					[Programmed in Java]<br><br><br>
-				</p>
-
-				<!-- github link -->
-				<div style="text-align: center;">
-					<input type="button" value="View On Github" onCLick="window.open('https://github.com/PScottZero/JavaPaint')"/>
-				</div>
-			</div>
-			
-			<!-- stp ground -->
-			<div id="info_block">
-				<p id="info_title"> STP Ground <br><br></p>
-
-				<!-- project image -->
-				<img style="width: 100%;" src="img\stp.png" draggable="false">
-
-				<!-- project description -->
-				<p><br> 
-					During my fall semester of 2017, I was part of the Student Space Program Laboratory's student training program (STP). There were three subgroups in this program. Two of which built small rockets that would contain a payload. This payload would send data to the last group, the ground station. I found myself in that group, and ended up designing the GUI used to display the information received from the payload. Due to communication errors on the day of launch, I was never actually able to see this program run for real. However, it should theoretically work.<br><br>
-
-					[Programmed in Python]<br><br><br>
-				</p>
-
-				<!-- github link -->
-				<div style="text-align: center;">
-					<input type="button" value="View On Github" onCLick="window.open('https://github.com/PScottZero/STP-Ground')"/>
 				</div>
 			</div>
 
@@ -106,26 +86,6 @@
 				</div>
 			</div>
 
-			<!-- lucas-lehmer primality test -->
-			<div id="info_block">
-				<p id="info_title"> Lucas-Lehmer Primality Test <br><br></p>
-
-				<!-- project image -->
-				<img style="width: 100%;" src="img\lucas.png" draggable="false">
-
-				<!-- project description -->
-				<p><br> 
-					Want to see how well your computer can handle calculated Mersenne Primes?!? (Large Prime in form 2&#8319;-1) Then look no further. Using the Lucas-Lehmer primality test, this program is able to calculate exceedingly large prime numbers.<br><br>
-
-					[Programmed in Kotlin]<br><br><br>
-				</p>
-
-				<!-- github link -->
-				<div style="text-align: center;">
-					<input type="button" value="View On Github" onCLick="window.open('https://github.com/PScottZero/Lucas-Lehmer-Test-Kotlin')"/>
-				</div>
-			</div>
-			
 			<!-- exgraph -->
 			<div id="info_block">
 				<p id="info_title"> ExGraph <br><br></p>
@@ -146,26 +106,6 @@
 				</div>
 			</div>
 
-			<!-- terminal enigma -->
-			<div id="info_block">
-				<p id="info_title"> Terminal Enigma <br><br></p>
-
-				<!-- project image -->
-				<img style="width: 100%;" src="img\enigma.png" draggable="false">
-
-				<!-- project description -->
-				<p><br> 
-					Being someone who loves ciphers, it is no surprise that the Enigma machine fascinates me. It seemed only reasonable that I would make a simulator of the infamous WWII code machine.<br><br>
-
-					[Programmed in Python]<br><br><br>
-				</p>
-
-				<!-- github link -->
-				<div style="text-align: center;">
-					<input type="button" value="View On Github" onCLick="window.open('https://github.com/PScottZero/TerminalEnigma')"/>
-				</div>
-			</div>
-			
 			<!-- the hypothetical computer -->
 			<div id="info_block">
 				<p id="info_title"> The Hypothetical Computer <br><br></p>
@@ -185,9 +125,49 @@
 					<input type="button" value="View On Github" onCLick="window.open('https://github.com/PScottZero/The-Hypothetical-Computer')"/>
 				</div>
 			</div>
+			
+			<!-- java paint -->
+			<div id="info_block">
+				<p id="info_title"> Java Paint <br><br></p>
+
+				<!-- project image -->
+				<img style="width: 100%;" src="img\javapaint.png" draggable="false">
+
+				<!-- project description -->
+				<p><br> 
+					Java Paint is designed to be a simple to use painting program. It has a few simple tools that allow for users to draw shapes like rectangles, ovals, and triangles. It also features the ability to open and save images.<br><br>
+
+					[Programmed in Java]<br><br><br>
+				</p>
+
+				<!-- github link -->
+				<div style="text-align: center;">
+					<input type="button" value="View On Github" onCLick="window.open('https://github.com/PScottZero/JavaPaint')"/>
+				</div>
+			</div>
+
+			<!-- lucas-lehmer primality test -->
+			<div id="info_block">
+				<p id="info_title"> Lucas-Lehmer Primality Test <br><br></p>
+
+				<!-- project image -->
+				<img style="width: 100%;" src="img\lucas.png" draggable="false">
+
+				<!-- project description -->
+				<p><br> 
+					Want to see how well your computer can handle calculated Mersenne Primes?!? (Large Prime in form 2&#8319;-1) Then look no further. Using the Lucas-Lehmer primality test, this program is able to calculate exceedingly large prime numbers.<br><br>
+
+					[Programmed in Kotlin]<br><br><br>
+				</p>
+
+				<!-- github link -->
+				<div style="text-align: center;">
+					<input type="button" value="View On Github" onCLick="window.open('https://github.com/PScottZero/Lucas-Lehmer-Test-Kotlin')"/>
+				</div>
+			</div>
 
 			<!-- metar decoder -->
-			<div id="info_block" style="padding-bottom: 5em">
+			<div id="info_block">
 				<p id="info_title"> METAR Decoder <br><br></p>
 
 				<!-- project image -->
@@ -203,6 +183,46 @@
 				<!-- github link -->
 				<div style="text-align: center;">
 					<input type="button" value="View On Github" onCLick="window.open('https://github.com/PScottZero/METAR-Decoder')"/>
+				</div>
+			</div>
+			
+			<!-- stp ground -->
+			<div id="info_block">
+				<p id="info_title"> STP Ground <br><br></p>
+
+				<!-- project image -->
+				<img style="width: 100%;" src="img\stp.png" draggable="false">
+
+				<!-- project description -->
+				<p><br> 
+					During my fall semester of 2017, I was part of the Student Space Program Laboratory's student training program (STP). There were three subgroups in this program. Two of which built small rockets that would contain a payload. This payload would send data to the last group, the ground station. I found myself in that group, and ended up designing the GUI used to display the information received from the payload. Due to communication errors on the day of launch, I was never actually able to see this program run for real. However, it should theoretically work.<br><br>
+
+					[Programmed in Python]<br><br><br>
+				</p>
+
+				<!-- github link -->
+				<div style="text-align: center;">
+					<input type="button" value="View On Github" onCLick="window.open('https://github.com/PScottZero/STP-Ground')"/>
+				</div>
+			</div>
+
+			<!-- terminal enigma -->
+			<div id="info_block" style="padding-bottom: 5em">
+				<p id="info_title"> Terminal Enigma <br><br></p>
+
+				<!-- project image -->
+				<img style="width: 100%;" src="img\enigma.png" draggable="false">
+
+				<!-- project description -->
+				<p><br> 
+					Being someone who loves ciphers, it is no surprise that the Enigma machine fascinates me. It seemed only reasonable that I would make a simulator of the infamous WWII code machine.<br><br>
+
+					[Programmed in Python]<br><br><br>
+				</p>
+
+				<!-- github link -->
+				<div style="text-align: center;">
+					<input type="button" value="View On Github" onCLick="window.open('https://github.com/PScottZero/TerminalEnigma')"/>
 				</div>
 			</div>
 		</div>
