--- a/about_mobile.html
+++ b/about_mobile.html
@@ -49,9 +49,9 @@
 		<div id="nav_bar">
 
 			<!-- links to other pages -->
-			<a href="index_mobile.html"><img src="img\icon_resume.png"></a>
-			<a href="projects_mobile.html"><img src="img\icon_projects.png"></a>
-			<a href="about_mobile.html"><img src="img\icon_about.png"></a>
+			<a href="index_mobile.html"><img src="img\icon_resume_mobile.png"></a>
+			<a href="projects_mobile.html"><img src="img\icon_projects_mobile.png"></a>
+			<a href="about_mobile.html"><img src="img\icon_about_mobile.png"></a>
 		</div>
 	</body>
 </html>
