--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
 			<!-- links to other pages -->
 			<div id="link_container">
-				<a href="index.html"> Resume </a>
-				<a href="projects.html"> Projects </a>
-				<a href="about.html"> About Me </a>
+				<a href="index.html"><img src="img\icon_resume.png" alt="Resume"></a>
+				<a href="projects.html"><img src="img\icon_projects.png" alt="Projects"></a>
+				<a href="about.html"><img src="img\icon_about.png" alt="About"></a>
 			</div>
 		</div>
 
