--- a/projects_mobile.html
+++ b/projects_mobile.html
@@ -77,7 +77,7 @@
 				<p><br> 
 					Need I say more? It's Conway's Game of Life!!! <br><br>
 
-					[Programmed in Java]<br><br><br>
+					[Programmed in Kotlin]<br><br><br>
 				</p>
 
 				<!-- github link -->
