--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html>
 
-	<!-- mobile redirect -->
-	<script type="text/javascript">
-		<!--
-		if (screen.width <= 699) {
-		document.location = "index_mobile.html";
-		}
-		//-->
-	</script>
-
 	<!-- device scale -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- webpage head -->
 	<head>
 		<title>Paul J Scott</title>
-		<link rel="stylesheet" href="styles.css">
+		
+		<link rel="stylesheet" media="screen and (min-width: 700px)" href="styles.css">
+		<link rel="stylesheet" media="screen and (max-width: 700px)" href="styles_mobile.css">
+		
 		<link rel="icon" href="img\favicon.png">
 
 		<!-- google font link -->
@@ -36,9 +30,24 @@
 
 			<!-- links to other pages -->
 			<div id="link_container">
-				<a href="index.html"><img src="img\icon_resume.png" alt="Resume"></a>
-				<a href="projects.html"><img src="img\icon_projects.png" alt="Projects"></a>
-				<a href="about.html"><img src="img\icon_about.png" alt="About"></a>
+				<a href="index.html">
+					<picture>
+						<source media="screen and (max-width: 700px)" srcset="img\icon_resume_mobile.png" alt="Resume">
+						<img src="img\icon_resume.png" alt="Resume">
+					</picture>
+				</a>
+				<a href="projects.html">
+					<picture>
+						<source media="screen and (max-width: 700px)" srcset="img\icon_projects_mobile.png" alt="Projects">
+						<img src="img\icon_projects.png" alt="Projects">
+					</picture>
+				</a>
+				<a href="about.html">
+					<picture>
+						<source media="screen and (max-width: 700px)" srcset="img\icon_about_mobile.png" alt="About">
+						<img src="img\icon_about.png" alt="About">
+					</picture>
+				</a>
 			</div>
 		</div>
 
@@ -166,7 +175,7 @@
 				</p>
 				
 				<!-- download resume button -->
-				<div style="text-align: center;">
+				<div>
 					<input type="button" value="Download Resume" onCLick="window.open('https://drive.google.com/file/d/1ylw6Xn9EBSVrFGOngqfX9eYdvLI8pTj-/view?usp=sharing')"/>
 				</div>
 			</div>
