--- a/projects.html
+++ b/projects.html
@@ -52,10 +52,10 @@
 		</div>
 		
 		<!-- webpage main body -->
-		<div id="middle">
+		<div id="middle_proj">
 			
 			<!-- apogee artist -->
-			<div id="info_block">
+			<div id="info_block_proj">
 				<p id="info_title"> Apogee Artist <br><br></p>
 
 				<!-- project image -->
@@ -75,7 +75,7 @@
 			</div>
 			
 			<!-- bitwise game maker -->
-			<div id="info_block">
+			<div id="info_block_proj">
 				<p id="info_title"> Bitwise Game Maker <br><br></p>
 
 				<!-- project image -->
@@ -95,7 +95,7 @@
 			</div>
 
 			<!-- conway's game of life -->
-			<div id="info_block">
+			<div id="info_block_proj">
 				<p id="info_title"> Conway's Game of Life <br><br></p>
 
 				<!-- project image -->
@@ -115,7 +115,7 @@
 			</div>
 
 			<!-- exgraph -->
-			<div id="info_block">
+			<div id="info_block_proj">
 				<p id="info_title"> ExGraph <br><br></p>
 
 				<!-- project image -->
@@ -135,7 +135,7 @@
 			</div>
 
 			<!-- the hypothetical computer -->
-			<div id="info_block">
+			<div id="info_block_proj">
 				<p id="info_title"> The Hypothetical Computer <br><br></p>
 
 				<!-- project image -->
@@ -155,7 +155,7 @@
 			</div>
 			
 			<!-- java paint -->
-			<div id="info_block">
+			<div id="info_block_proj">
 				<p id="info_title"> Java Paint <br><br></p>
 
 				<!-- project image -->
@@ -175,7 +175,7 @@
 			</div>
 
 			<!-- lucas-lehmer primality test -->
-			<div id="info_block">
+			<div id="info_block_proj">
 				<p id="info_title"> Lucas-Lehmer Primality Test <br><br></p>
 
 				<!-- project image -->
@@ -195,7 +195,7 @@
 			</div>
 
 			<!-- metar decoder -->
-			<div id="info_block">
+			<div id="info_block_proj">
 				<p id="info_title"> METAR Decoder <br><br></p>
 
 				<!-- project image -->
@@ -215,7 +215,7 @@
 			</div>
 			
 			<!-- stp ground -->
-			<div id="info_block">
+			<div id="info_block_proj">
 				<p id="info_title"> STP Ground <br><br></p>
 
 				<!-- project image -->
@@ -235,7 +235,7 @@
 			</div>
 
 			<!-- terminal enigma -->
-			<div id="info_block">
+			<div id="info_block_proj">
 				<p id="info_title"> Terminal Enigma <br><br></p>
 
 				<!-- project image -->
