--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 	<!-- device scale -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+	<!-- javascript -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="js\scripts.js"></script>
+
 	<!-- webpage head -->
 	<head>
 		<title>Paul J Scott</title>
 		
-		<link rel="stylesheet" media="screen and (min-width: 700px)" href="styles.css">
-		<link rel="stylesheet" media="screen and (max-width: 700px)" href="styles_mobile.css">
+		<link rel="stylesheet" media="screen and (min-width: 700px)" href="css\styles.css">
+		<link rel="stylesheet" media="screen and (max-width: 700px)" href="css\styles_mobile.css">
 		
 		<link rel="icon" href="img\favicon.png">
 
@@ -56,7 +60,7 @@
 
 			<!-- resume -->
 			<div id="info_block">
-				<p id="info_title"> Resume <br><br></p>
+				<p class="info_title"> Resume <br><br></p>
 
 				<!-- contact information -->
 				<p> Paul Scott </p>
@@ -176,7 +180,7 @@
 				
 				<!-- download resume button -->
 				<div>
-					<input type="button" value="Download Resume" onCLick="window.open('https://drive.google.com/file/d/1ylw6Xn9EBSVrFGOngqfX9eYdvLI8pTj-/view?usp=sharing')"/>
+					<input type="button" value="Download Resume" class="button" onCLick="window.open('https://drive.google.com/file/d/1ylw6Xn9EBSVrFGOngqfX9eYdvLI8pTj-/view?usp=sharing')"/>
 				</div>
 			</div>
 		</div>
