--- a/projects.html
+++ b/projects.html
@@ -217,6 +217,27 @@
 					<input type="button" value="View On Github" class="button" onCLick="window.open('https://github.com/PScottZero/METAR-Decoder')"/>
 				</div>
 			</div>
+
+			<!-- recaman sequence visualizer -->
+			<div class="info_block_proj">
+				<p class="info_title"> Recam&aacuten Sequence Visualizer <br><br></p>
+
+				<!-- project image -->
+				<img src="img\recaman.png" draggable="false">
+
+				<!-- project description -->
+				<p><br> 
+					This program creates a visual representation of the Recam&aacuten Sequence. The sequence is best explained by the 
+					<a href="https://youtu.be/FGC5TdIiT9U">video</a> that inspired me to write this program.</a><br><br>
+
+					[Programmed in Kotlin]<br><br><br>
+				</p>
+
+				<!-- github link -->
+				<div>
+					<input type="button" value="View On Github" class="button" onCLick="window.open('https://github.com/PScottZero/Recaman-Sequence-Visualizer')"/>
+				</div>
+			</div>
 			
 			<!-- stp ground -->
 			<div class="info_block_proj">
