--- a/projects.html
+++ b/projects.html
@@ -118,6 +118,27 @@
 				</div>
 			</div>
 
+			<!-- easton coach driver report -->
+			<div class="info_block_proj">
+				<p class="info_title"> Easton Coach Driver Report <br><br></p>
+
+				<!-- project image -->
+				<img src="img\easton.png" draggable="false">
+
+				<!-- project description -->
+				<p><br> 
+					This program generates a weekly driver report for drivers of Easton Coach Company. The program calculates the first login and last logout of the day, and first motion start and last motion stop for each driver. <br><br>
+
+					[Programmed in Kotlin]<br><br><br>
+				</p>
+
+				<!-- github link -->
+				<div>
+					<input type="button" value="View On Github" class="button" onCLick="window.open('https://github.com/PScottZero/Easton-Coach-Driver-Report')"/>
+				</div>
+			</div>
+
+
 			<!-- exgraph -->
 			<div class="info_block_proj">
 				<p class="info_title"> ExGraph <br><br></p>
