--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 					
 					<i>Pennsylvania State University (PSU),</i> University Park, PA<br>
 					Bachelor of Science in Computer Science, May 2021   GPA 3.97/4.0<br>
+					Schreyer Honors Scholar (Gateway Program Fall 2018)
 					Dean's Lists: Fall 2017, Spring 2018<br>
 					President's Freshman Award April 2018<br><br>
 					
