--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
 
 				<!-- bibliography -->
 				<p>
-					<br><br>My name is Paul Scott (if you already haven't guessed). I am 19 years old, and I am a freshman at Penn State University pursuing a degree in Computer Science. I have been programming since the 9th grade, and am most proficient in Java and Python. One of my current activities includes contributing to Penn State's Lunar Lion. I also participated in the Spring 2018 Hack PSU hackathon, at which I demoed a project that I only had 24 hours to program. Aside from computers, my other interests include aviation, coin collecting, retro technology, and vinyl records.<br><br><br>
+					<br><br>My name is Paul Joseph Scott IV. I am 19 years old, and I am a sophomore at Penn State University pursuing a degree in Computer Science. I have been programming since the 9th grade, and am most proficient in Java, Kotlin, and Python. I am currently the lead of thr Ground Control Software at Penn State's Lunar Lion club. I am also currently involed in the Association for Computing Machinery (ACM). I also participated in the Spring 2018 Hack PSU hackathon, at which I demoed a project that I only had 24 hours to program. Aside from computers, my other interests include aviation, retro technology, vinyl records, and coin collecting.<br><br><br>
 				</p>
 
 				<!-- contact information -->
