--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
+    <!-- device scale -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- javascript / jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/conway.js"></script>
@@ -14,7 +17,8 @@
         <title>Paul J Scott</title>
 
         <!-- link to css -->
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" media="screen and (min-width: 700px)" href="css/styles.css">
+        <link rel="stylesheet" media="screen and (max-width: 700px)" href="css/styles_mobile.css">
 
         <!-- google font link -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
