better hobby icons

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <p style="font-size: 36px">Vinyls</p>
                 </div>
                 <div class="content_div">
-                    <img src="img/hob_icons/retro.png" style="float: left">
+                    <img src="img/hob_icons/mac.png" style="float: left">
                     <p style="font-size: 36px">Old Tech</p>
                 </div>
             </div>
@@ -213,7 +213,7 @@
                 </div>
                 <div class="content_div">
                     <img src="img/hob_icons/coin.png" style="float: left">
-                    <p style="font-size: 36px">Coins</p>
+                    <p style="font-size: 36px">Coin Colleting</p>
                 </div>
             </div>
         </div>
